2009-09-24  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): Add back support for order-only
	prerequisites for secondary expansion implicit rules, that were
	accidentally dropped.  If we find a "|", enable order-only mode
	and set IGNORE_MTIME on all deps that are seen afterward.
	(pattern_search): Fix memory leaks: for intermediate files where
	we've already set the file variable and pattern variable sets, be
	sure to either save or free them as appropriate.

2009-09-23  Paul Smith  <psmith@gnu.org>

	Rework the way secondary expansion is stored, for efficiency.
	This changes secondary expansion so that ONLY WHEN we know we have
	a possibility of needing secondary expansion, do we defer the
	secondary expansion.  This means more parsing the deps but we use
	a lot less memory (due to the strcache).  Also, this fixes
	Savannah bug #18622.

	* read.c (eval): Don't parse the dep string here anymore.
	(record_files): Take the dep argument as an unparsed string.  If
	secondary expansion is enabled AND the prereq string has a '$' in
	it, then set NEED_2ND_EXPANSION and keep the entire string.
	Otherwise, parse the dep string here to construct the dep list
	with the names in the strcache.

	* misc.c (copy_dep_chain): For NEED_2ND_EXPANSION, we need to
	duplicate the name string (others are in the strcache).

	* implicit.c: Remove struct idep and free_idep_chain(): unused.
	(struct patdeps): New structure to store prereq information.
	(pattern_search): Use the NEED_2ND_EXPANSION flag to determine
	which prerequisites need expansion, and expand only those.

	* file.c (split_prereqs): Break parse_prereqs() into two parts: this
	and enter_prereqs().  split_prereqs() takes a fully-expanded string
	and splits it into a DEP list, handling order-only prereqs.
	(enter_prereqs): This function enters a list of DEPs into the file
	database.  If there's a stem defined, expand any pattern chars.
	(expand_deps): Only try to expand DEPs which have NEED_2ND_EXPANSION